:rocket:Configurando H2 database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Gestao de Custos Pessoais
+
+
+
+# H2 DATABASE CONF
+spring.datasource.url=jdbc:h2:file:./data/gestao-despesa
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.Dialect.H2Dialect
